parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_declaracoes
Rule 2     lista_declaracoes -> lista_declaracoes declaracao
Rule 3     lista_declaracoes -> declaracao
Rule 4     declaracao -> declaracao_variaveis
Rule 5     declaracao -> inicializacao_variaveis
Rule 6     declaracao -> declaracao_funcao
Rule 7     declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis
Rule 8     inicializacao_variaveis -> atribuicao
Rule 9     lista_variaveis -> lista_variaveis VIRGULA var
Rule 10    lista_variaveis -> var
Rule 11    var -> id
Rule 12    var -> id indice
Rule 13    indice -> indice ABRE_COLCHETE expressao FECHA_COLCHETE
Rule 14    indice -> ABRE_COLCHETE expressao FECHA_COLCHETE
Rule 15    tipo -> INTEIRO
Rule 16    tipo -> FLUTUANTE
Rule 17    declaracao_funcao -> tipo cabecalho
Rule 18    declaracao_funcao -> cabecalho
Rule 19    cabecalho -> id ABRE_PARENTESE lista_parametros FECHA_PARENTESE corpo FIM
Rule 20    lista_parametros -> lista_parametros VIRGULA parametro
Rule 21    lista_parametros -> parametro
Rule 22    lista_parametros -> empty
Rule 23    parametro -> tipo DOIS_PONTOS id
Rule 24    parametro -> parametro ABRE_COLCHETE FECHA_COLCHETE
Rule 25    corpo -> corpo acao
Rule 26    corpo -> empty
Rule 27    acao -> expressao
Rule 28    acao -> declaracao_variaveis
Rule 29    acao -> se
Rule 30    acao -> repita
Rule 31    acao -> leia
Rule 32    acao -> escreva
Rule 33    acao -> retorna
Rule 34    se -> SE expressao ENTAO corpo FIM
Rule 35    se -> SE expressao ENTAO corpo SENAO corpo FIM
Rule 36    repita -> REPITA corpo ATE expressao
Rule 37    atribuicao -> var ATRIBUICAO expressao
Rule 38    leia -> LEIA ABRE_PARENTESE var FECHA_PARENTESE
Rule 39    escreva -> ESCREVA ABRE_PARENTESE expressao FECHA_PARENTESE
Rule 40    retorna -> RETORNA ABRE_PARENTESE expressao FECHA_PARENTESE
Rule 41    expressao -> expressao_logica
Rule 42    expressao -> atribuicao
Rule 43    expressao_logica -> expressao_simples
Rule 44    expressao_logica -> expressao_logica operador_logico expressao_simples
Rule 45    expressao_simples -> expressao_aditiva
Rule 46    expressao_simples -> expressao_simples operador_relacional expressao_aditiva
Rule 47    expressao_aditiva -> expressao_multiplicativa
Rule 48    expressao_aditiva -> expressao_aditiva operador_soma expressao_multiplicativa
Rule 49    expressao_multiplicativa -> expressao_unaria
Rule 50    expressao_multiplicativa -> expressao_multiplicativa operador_multiplicacao expressao_unaria
Rule 51    expressao_unaria -> fator
Rule 52    expressao_unaria -> operador_soma fator
Rule 53    expressao_unaria -> operador_negacao fator
Rule 54    operador_relacional -> MENOR
Rule 55    operador_relacional -> MAIOR
Rule 56    operador_relacional -> IGUAL
Rule 57    operador_relacional -> DIFERENTE
Rule 58    operador_relacional -> MENOR_IGUAL
Rule 59    operador_relacional -> MAIOR_IGUAL
Rule 60    operador_soma -> MAIS
Rule 61    operador_soma -> MENOS
Rule 62    operador_logico -> E_LOGICO
Rule 63    operador_logico -> OU_LOGICO
Rule 64    operador_negacao -> NEGACAO
Rule 65    operador_multiplicacao -> MULT
Rule 66    operador_multiplicacao -> DIVISAO
Rule 67    fator -> ABRE_PARENTESE expressao FECHA_PARENTESE
Rule 68    fator -> var
Rule 69    fator -> chamada_funcao
Rule 70    fator -> numero
Rule 71    numero -> num_int
Rule 72    numero -> num_flut
Rule 73    numero -> num_notacao
Rule 74    chamada_funcao -> id ABRE_PARENTESE lista_argumentos FECHA_PARENTESE
Rule 75    lista_argumentos -> lista_argumentos VIRGULA expressao
Rule 76    lista_argumentos -> expressao
Rule 77    lista_argumentos -> empty
Rule 78    id -> ID
Rule 79    abre_parentese -> ABRE_PARENTESE
Rule 80    fecha_parentese -> FECHA_PARENTESE
Rule 81    abre_colchete -> ABRE_COLCHETE
Rule 82    fecha_colchete -> FECHA_COLCHETE
Rule 83    dois_pontos -> DOIS_PONTOS
Rule 84    maior -> MAIOR
Rule 85    menor -> MENOR
Rule 86    diferente -> DIFERENTE
Rule 87    maior_igual -> MAIOR_IGUAL
Rule 88    menor_igual -> MENOR_IGUAL
Rule 89    num_int -> NUM_INT
Rule 90    num_flut -> NUM_FLUT
Rule 91    num_notacao -> NUM_NOTACAO
Rule 92    empty -> <empty>

Terminals, with rules where they appear

ABRE_COLCHETE        : 13 14 24 81
ABRE_PARENTESE       : 19 38 39 40 67 74 79
ATE                  : 36
ATRIBUICAO           : 37
DIFERENTE            : 57 86
DIVISAO              : 66
DOIS_PONTOS          : 7 23 83
ENTAO                : 34 35
ESCREVA              : 39
E_LOGICO             : 62
FECHA_COLCHETE       : 13 14 24 82
FECHA_PARENTESE      : 19 38 39 40 67 74 80
FIM                  : 19 34 35
FLUTUANTE            : 16
ID                   : 78
IGUAL                : 56
INTEIRO              : 15
LEIA                 : 38
MAIOR                : 55 84
MAIOR_IGUAL          : 59 87
MAIS                 : 60
MENOR                : 54 85
MENOR_IGUAL          : 58 88
MENOS                : 61
MULT                 : 65
NEGACAO              : 64
NUM_FLUT             : 90
NUM_INT              : 89
NUM_NOTACAO          : 91
OU_LOGICO            : 63
REPITA               : 36
RETORNA              : 40
SE                   : 34 35
SENAO                : 35
VIRGULA              : 9 20 75
error                : 

Nonterminals, with rules where they appear

abre_colchete        : 
abre_parentese       : 
acao                 : 25
atribuicao           : 8 42
cabecalho            : 17 18
chamada_funcao       : 69
corpo                : 19 25 34 35 35 36
declaracao           : 2 3
declaracao_funcao    : 6
declaracao_variaveis : 4 28
diferente            : 
dois_pontos          : 
empty                : 22 26 77
escreva              : 32
expressao            : 13 14 27 34 35 36 37 39 40 67 75 76
expressao_aditiva    : 45 46 48
expressao_logica     : 41 44
expressao_multiplicativa : 47 48 50
expressao_simples    : 43 44 46
expressao_unaria     : 49 50
fator                : 51 52 53
fecha_colchete       : 
fecha_parentese      : 
id                   : 11 12 19 23 74
indice               : 12 13
inicializacao_variaveis : 5
leia                 : 31
lista_argumentos     : 74 75
lista_declaracoes    : 1 2
lista_parametros     : 19 20
lista_variaveis      : 7 9
maior                : 
maior_igual          : 
menor                : 
menor_igual          : 
num_flut             : 72
num_int              : 71
num_notacao          : 73
numero               : 70
operador_logico      : 44
operador_multiplicacao : 50
operador_negacao     : 53
operador_relacional  : 46
operador_soma        : 48 52
parametro            : 20 21 24
programa             : 0
repita               : 30
retorna              : 33
se                   : 29
tipo                 : 7 17 23
var                  : 9 10 37 38 68

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_declaracoes
    (2) lista_declaracoes -> . lista_declaracoes declaracao
    (3) lista_declaracoes -> . declaracao
    (4) declaracao -> . declaracao_variaveis
    (5) declaracao -> . inicializacao_variaveis
    (6) declaracao -> . declaracao_funcao
    (7) declaracao_variaveis -> . tipo DOIS_PONTOS lista_variaveis
    (8) inicializacao_variaveis -> . atribuicao
    (17) declaracao_funcao -> . tipo cabecalho
    (18) declaracao_funcao -> . cabecalho
    (15) tipo -> . INTEIRO
    (16) tipo -> . FLUTUANTE
    (37) atribuicao -> . var ATRIBUICAO expressao
    (19) cabecalho -> . id ABRE_PARENTESE lista_parametros FECHA_PARENTESE corpo FIM
    (11) var -> . id
    (12) var -> . id indice
    (78) id -> . ID

    INTEIRO         shift and go to state 3
    FLUTUANTE       shift and go to state 6
    ID              shift and go to state 10

    lista_declaracoes              shift and go to state 1
    var                            shift and go to state 9
    programa                       shift and go to state 2
    tipo                           shift and go to state 4
    declaracao_funcao              shift and go to state 11
    inicializacao_variaveis        shift and go to state 8
    declaracao_variaveis           shift and go to state 12
    atribuicao                     shift and go to state 5
    id                             shift and go to state 13
    declaracao                     shift and go to state 14
    cabecalho                      shift and go to state 7

state 1

    (1) programa -> lista_declaracoes .
    (2) lista_declaracoes -> lista_declaracoes . declaracao
    (4) declaracao -> . declaracao_variaveis
    (5) declaracao -> . inicializacao_variaveis
    (6) declaracao -> . declaracao_funcao
    (7) declaracao_variaveis -> . tipo DOIS_PONTOS lista_variaveis
    (8) inicializacao_variaveis -> . atribuicao
    (17) declaracao_funcao -> . tipo cabecalho
    (18) declaracao_funcao -> . cabecalho
    (15) tipo -> . INTEIRO
    (16) tipo -> . FLUTUANTE
    (37) atribuicao -> . var ATRIBUICAO expressao
    (19) cabecalho -> . id ABRE_PARENTESE lista_parametros FECHA_PARENTESE corpo FIM
    (11) var -> . id
    (12) var -> . id indice
    (78) id -> . ID

    $end            reduce using rule 1 (programa -> lista_declaracoes .)
    INTEIRO         shift and go to state 3
    FLUTUANTE       shift and go to state 6
    ID              shift and go to state 10

    var                            shift and go to state 9
    tipo                           shift and go to state 4
    declaracao_funcao              shift and go to state 11
    inicializacao_variaveis        shift and go to state 8
    declaracao_variaveis           shift and go to state 12
    atribuicao                     shift and go to state 5
    id                             shift and go to state 13
    declaracao                     shift and go to state 15
    cabecalho                      shift and go to state 7

state 2

    (0) S' -> programa .



state 3

    (15) tipo -> INTEIRO .

    DOIS_PONTOS     reduce using rule 15 (tipo -> INTEIRO .)
    ID              reduce using rule 15 (tipo -> INTEIRO .)


state 4

    (7) declaracao_variaveis -> tipo . DOIS_PONTOS lista_variaveis
    (17) declaracao_funcao -> tipo . cabecalho
    (19) cabecalho -> . id ABRE_PARENTESE lista_parametros FECHA_PARENTESE corpo FIM
    (78) id -> . ID

    DOIS_PONTOS     shift and go to state 17
    ID              shift and go to state 10

    id                             shift and go to state 16
    cabecalho                      shift and go to state 18

state 5

    (8) inicializacao_variaveis -> atribuicao .

    INTEIRO         reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    FLUTUANTE       reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    ID              reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    $end            reduce using rule 8 (inicializacao_variaveis -> atribuicao .)


state 6

    (16) tipo -> FLUTUANTE .

    DOIS_PONTOS     reduce using rule 16 (tipo -> FLUTUANTE .)
    ID              reduce using rule 16 (tipo -> FLUTUANTE .)


state 7

    (18) declaracao_funcao -> cabecalho .

    INTEIRO         reduce using rule 18 (declaracao_funcao -> cabecalho .)
    FLUTUANTE       reduce using rule 18 (declaracao_funcao -> cabecalho .)
    ID              reduce using rule 18 (declaracao_funcao -> cabecalho .)
    $end            reduce using rule 18 (declaracao_funcao -> cabecalho .)


state 8

    (5) declaracao -> inicializacao_variaveis .

    INTEIRO         reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    FLUTUANTE       reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    ID              reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    $end            reduce using rule 5 (declaracao -> inicializacao_variaveis .)


state 9

    (37) atribuicao -> var . ATRIBUICAO expressao

    ATRIBUICAO      shift and go to state 19


state 10

    (78) id -> ID .

    ABRE_PARENTESE  reduce using rule 78 (id -> ID .)
    ABRE_COLCHETE   reduce using rule 78 (id -> ID .)
    ATRIBUICAO      reduce using rule 78 (id -> ID .)
    MULT            reduce using rule 78 (id -> ID .)
    DIVISAO         reduce using rule 78 (id -> ID .)
    MAIS            reduce using rule 78 (id -> ID .)
    MENOS           reduce using rule 78 (id -> ID .)
    MENOR           reduce using rule 78 (id -> ID .)
    MAIOR           reduce using rule 78 (id -> ID .)
    IGUAL           reduce using rule 78 (id -> ID .)
    DIFERENTE       reduce using rule 78 (id -> ID .)
    MENOR_IGUAL     reduce using rule 78 (id -> ID .)
    MAIOR_IGUAL     reduce using rule 78 (id -> ID .)
    E_LOGICO        reduce using rule 78 (id -> ID .)
    OU_LOGICO       reduce using rule 78 (id -> ID .)
    FIM             reduce using rule 78 (id -> ID .)
    SE              reduce using rule 78 (id -> ID .)
    REPITA          reduce using rule 78 (id -> ID .)
    LEIA            reduce using rule 78 (id -> ID .)
    ESCREVA         reduce using rule 78 (id -> ID .)
    RETORNA         reduce using rule 78 (id -> ID .)
    INTEIRO         reduce using rule 78 (id -> ID .)
    FLUTUANTE       reduce using rule 78 (id -> ID .)
    ID              reduce using rule 78 (id -> ID .)
    NEGACAO         reduce using rule 78 (id -> ID .)
    NUM_INT         reduce using rule 78 (id -> ID .)
    NUM_FLUT        reduce using rule 78 (id -> ID .)
    NUM_NOTACAO     reduce using rule 78 (id -> ID .)
    FECHA_PARENTESE reduce using rule 78 (id -> ID .)
    VIRGULA         reduce using rule 78 (id -> ID .)
    $end            reduce using rule 78 (id -> ID .)
    FECHA_COLCHETE  reduce using rule 78 (id -> ID .)
    ENTAO           reduce using rule 78 (id -> ID .)
    ATE             reduce using rule 78 (id -> ID .)
    SENAO           reduce using rule 78 (id -> ID .)


state 11

    (6) declaracao -> declaracao_funcao .

    INTEIRO         reduce using rule 6 (declaracao -> declaracao_funcao .)
    FLUTUANTE       reduce using rule 6 (declaracao -> declaracao_funcao .)
    ID              reduce using rule 6 (declaracao -> declaracao_funcao .)
    $end            reduce using rule 6 (declaracao -> declaracao_funcao .)


state 12

    (4) declaracao -> declaracao_variaveis .

    INTEIRO         reduce using rule 4 (declaracao -> declaracao_variaveis .)
    FLUTUANTE       reduce using rule 4 (declaracao -> declaracao_variaveis .)
    ID              reduce using rule 4 (declaracao -> declaracao_variaveis .)
    $end            reduce using rule 4 (declaracao -> declaracao_variaveis .)


state 13

    (19) cabecalho -> id . ABRE_PARENTESE lista_parametros FECHA_PARENTESE corpo FIM
    (11) var -> id .
    (12) var -> id . indice
    (13) indice -> . indice ABRE_COLCHETE expressao FECHA_COLCHETE
    (14) indice -> . ABRE_COLCHETE expressao FECHA_COLCHETE

    ABRE_PARENTESE  shift and go to state 20
    ATRIBUICAO      reduce using rule 11 (var -> id .)
    ABRE_COLCHETE   shift and go to state 22

    indice                         shift and go to state 21

state 14

    (3) lista_declaracoes -> declaracao .

    INTEIRO         reduce using rule 3 (lista_declaracoes -> declaracao .)
    FLUTUANTE       reduce using rule 3 (lista_declaracoes -> declaracao .)
    ID              reduce using rule 3 (lista_declaracoes -> declaracao .)
    $end            reduce using rule 3 (lista_declaracoes -> declaracao .)


state 15

    (2) lista_declaracoes -> lista_declaracoes declaracao .

    INTEIRO         reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    FLUTUANTE       reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    ID              reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    $end            reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)


state 16

    (19) cabecalho -> id . ABRE_PARENTESE lista_parametros FECHA_PARENTESE corpo FIM

    ABRE_PARENTESE  shift and go to state 20


state 17

    (7) declaracao_variaveis -> tipo DOIS_PONTOS . lista_variaveis
    (9) lista_variaveis -> . lista_variaveis VIRGULA var
    (10) lista_variaveis -> . var
    (11) var -> . id
    (12) var -> . id indice
    (78) id -> . ID

    ID              shift and go to state 10

    id                             shift and go to state 24
    lista_variaveis                shift and go to state 23
    var                            shift and go to state 25

state 18

    (17) declaracao_funcao -> tipo cabecalho .

    INTEIRO         reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)
    FLUTUANTE       reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)
    ID              reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)
    $end            reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)


state 19

    (37) atribuicao -> var ATRIBUICAO . expressao
    (41) expressao -> . expressao_logica
    (42) expressao -> . atribuicao
    (43) expressao_logica -> . expressao_simples
    (44) expressao_logica -> . expressao_logica operador_logico expressao_simples
    (37) atribuicao -> . var ATRIBUICAO expressao
    (45) expressao_simples -> . expressao_aditiva
    (46) expressao_simples -> . expressao_simples operador_relacional expressao_aditiva
    (11) var -> . id
    (12) var -> . id indice
    (47) expressao_aditiva -> . expressao_multiplicativa
    (48) expressao_aditiva -> . expressao_aditiva operador_soma expressao_multiplicativa
    (78) id -> . ID
    (49) expressao_multiplicativa -> . expressao_unaria
    (50) expressao_multiplicativa -> . expressao_multiplicativa operador_multiplicacao expressao_unaria
    (51) expressao_unaria -> . fator
    (52) expressao_unaria -> . operador_soma fator
    (53) expressao_unaria -> . operador_negacao fator
    (67) fator -> . ABRE_PARENTESE expressao FECHA_PARENTESE
    (68) fator -> . var
    (69) fator -> . chamada_funcao
    (70) fator -> . numero
    (60) operador_soma -> . MAIS
    (61) operador_soma -> . MENOS
    (64) operador_negacao -> . NEGACAO
    (74) chamada_funcao -> . id ABRE_PARENTESE lista_argumentos FECHA_PARENTESE
    (71) numero -> . num_int
    (72) numero -> . num_flut
    (73) numero -> . num_notacao
    (89) num_int -> . NUM_INT
    (90) num_flut -> . NUM_FLUT
    (91) num_notacao -> . NUM_NOTACAO

    ID              shift and go to state 10
    ABRE_PARENTESE  shift and go to state 29
    MAIS            shift and go to state 27
    MENOS           shift and go to state 28
    NEGACAO         shift and go to state 31
    NUM_INT         shift and go to state 42
    NUM_FLUT        shift and go to state 37
    NUM_NOTACAO     shift and go to state 36

    expressao_multiplicativa       shift and go to state 30
    expressao_logica               shift and go to state 26
    operador_negacao               shift and go to state 49
    numero                         shift and go to state 34
    num_flut                       shift and go to state 38
    expressao_unaria               shift and go to state 35
    atribuicao                     shift and go to state 33
    id                             shift and go to state 45
    var                            shift and go to state 39
    expressao_simples              shift and go to state 40
    num_int                        shift and go to state 41
    expressao                      shift and go to state 43
    operador_soma                  shift and go to state 44
    expressao_aditiva              shift and go to state 32
    num_notacao                    shift and go to state 46
    chamada_funcao                 shift and go to state 47
    fator                          shift and go to state 48

state 20

    (19) cabecalho -> id ABRE_PARENTESE . lista_parametros FECHA_PARENTESE corpo FIM
    (20) lista_parametros -> . lista_parametros VIRGULA parametro
    (21) lista_parametros -> . parametro
    (22) lista_parametros -> . empty
    (23) parametro -> . tipo DOIS_PONTOS id
    (24) parametro -> . parametro ABRE_COLCHETE FECHA_COLCHETE
    (92) empty -> .
    (15) tipo -> . INTEIRO
    (16) tipo -> . FLUTUANTE

    FECHA_PARENTESE reduce using rule 92 (empty -> .)
    VIRGULA         reduce using rule 92 (empty -> .)
    INTEIRO         shift and go to state 3
    FLUTUANTE       shift and go to state 6

    lista_parametros               shift and go to state 50
    empty                          shift and go to state 51
    tipo                           shift and go to state 52
    parametro                      shift and go to state 53

state 21

    (12) var -> id indice .
    (13) indice -> indice . ABRE_COLCHETE expressao FECHA_COLCHETE

    ATRIBUICAO      reduce using rule 12 (var -> id indice .)
    MULT            reduce using rule 12 (var -> id indice .)
    DIVISAO         reduce using rule 12 (var -> id indice .)
    MAIS            reduce using rule 12 (var -> id indice .)
    MENOS           reduce using rule 12 (var -> id indice .)
    MENOR           reduce using rule 12 (var -> id indice .)
    MAIOR           reduce using rule 12 (var -> id indice .)
    IGUAL           reduce using rule 12 (var -> id indice .)
    DIFERENTE       reduce using rule 12 (var -> id indice .)
    MENOR_IGUAL     reduce using rule 12 (var -> id indice .)
    MAIOR_IGUAL     reduce using rule 12 (var -> id indice .)
    E_LOGICO        reduce using rule 12 (var -> id indice .)
    OU_LOGICO       reduce using rule 12 (var -> id indice .)
    ENTAO           reduce using rule 12 (var -> id indice .)
    INTEIRO         reduce using rule 12 (var -> id indice .)
    FLUTUANTE       reduce using rule 12 (var -> id indice .)
    ID              reduce using rule 12 (var -> id indice .)
    $end            reduce using rule 12 (var -> id indice .)
    FECHA_COLCHETE  reduce using rule 12 (var -> id indice .)
    FECHA_PARENTESE reduce using rule 12 (var -> id indice .)
    VIRGULA         reduce using rule 12 (var -> id indice .)
    FIM             reduce using rule 12 (var -> id indice .)
    SE              reduce using rule 12 (var -> id indice .)
    REPITA          reduce using rule 12 (var -> id indice .)
    LEIA            reduce using rule 12 (var -> id indice .)
    ESCREVA         reduce using rule 12 (var -> id indice .)
    RETORNA         reduce using rule 12 (var -> id indice .)
    ABRE_PARENTESE  reduce using rule 12 (var -> id indice .)
    NEGACAO         reduce using rule 12 (var -> id indice .)
    NUM_INT         reduce using rule 12 (var -> id indice .)
    NUM_FLUT        reduce using rule 12 (var -> id indice .)
    NUM_NOTACAO     reduce using rule 12 (var -> id indice .)
    ATE             reduce using rule 12 (var -> id indice .)
    SENAO           reduce using rule 12 (var -> id indice .)
    ABRE_COLCHETE   shift and go to state 54


state 22

    (14) indice -> ABRE_COLCHETE . expressao FECHA_COLCHETE
    (41) expressao -> . expressao_logica
    (42) expressao -> . atribuicao
    (43) expressao_logica -> . expressao_simples
    (44) expressao_logica -> . expressao_logica operador_logico expressao_simples
    (37) atribuicao -> . var ATRIBUICAO expressao
    (45) expressao_simples -> . expressao_aditiva
    (46) expressao_simples -> . expressao_simples operador_relacional expressao_aditiva
    (11) var -> . id
    (12) var -> . id indice
    (47) expressao_aditiva -> . expressao_multiplicativa
    (48) expressao_aditiva -> . expressao_aditiva operador_soma expressao_multiplicativa
    (78) id -> . ID
    (49) expressao_multiplicativa -> . expressao_unaria
    (50) expressao_multiplicativa -> . expressao_multiplicativa operador_multiplicacao expressao_unaria
    (51) expressao_unaria -> . fator
    (52) expressao_unaria -> . operador_soma fator
    (53) expressao_unaria -> . operador_negacao fator
    (67) fator -> . ABRE_PARENTESE expressao FECHA_PARENTESE
    (68) fator -> . var
    (69) fator -> . chamada_funcao
    (70) fator -> . numero
    (60) operador_soma -> . MAIS
    (61) operador_soma -> . MENOS
    (64) operador_negacao -> . NEGACAO
    (74) chamada_funcao -> . id ABRE_PARENTESE lista_argumentos FECHA_PARENTESE
    (71) numero -> . num_int
    (72) numero -> . num_flut
    (73) numero -> . num_notacao
    (89) num_int -> . NUM_INT
    (90) num_flut -> . NUM_FLUT
    (91) num_notacao -> . NUM_NOTACAO

    ID              shift and go to state 10
    ABRE_PARENTESE  shift and go to state 29
    MAIS            shift and go to state 27
    MENOS           shift and go to state 28
    NEGACAO         shift and go to state 31
    NUM_INT         shift and go to state 42
    NUM_FLUT        shift and go to state 37
    NUM_NOTACAO     shift and go to state 36

    expressao_multiplicativa       shift and go to state 30
    expressao_logica               shift and go to state 26
    operador_negacao               shift and go to state 49
    numero                         shift and go to state 34
    num_flut                       shift and go to state 38
    expressao_unaria               shift and go to state 35
    atribuicao                     shift and go to state 33
    id                             shift and go to state 45
    var                            shift and go to state 39
    expressao_simples              shift and go to state 40
    num_int                        shift and go to state 41
    expressao                      shift and go to state 55
    operador_soma                  shift and go to state 44
    expressao_aditiva              shift and go to state 32
    num_notacao                    shift and go to state 46
    chamada_funcao                 shift and go to state 47
    fator                          shift and go to state 48

state 23

    (7) declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .
    (9) lista_variaveis -> lista_variaveis . VIRGULA var

    INTEIRO         reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    FLUTUANTE       reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    ID              reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    $end            reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    FIM             reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    SE              reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    REPITA          reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    LEIA            reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    ESCREVA         reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    RETORNA         reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    ABRE_PARENTESE  reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    MAIS            reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    MENOS           reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    NEGACAO         reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    NUM_INT         reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    NUM_FLUT        reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    NUM_NOTACAO     reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    SENAO           reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    ATE             reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    VIRGULA         shift and go to state 56


state 24

    (11) var -> id .
    (12) var -> id . indice
    (13) indice -> . indice ABRE_COLCHETE expressao FECHA_COLCHETE
    (14) indice -> . ABRE_COLCHETE expressao FECHA_COLCHETE

    VIRGULA         reduce using rule 11 (var -> id .)
    INTEIRO         reduce using rule 11 (var -> id .)
    FLUTUANTE       reduce using rule 11 (var -> id .)
    ID              reduce using rule 11 (var -> id .)
    $end            reduce using rule 11 (var -> id .)
    FIM             reduce using rule 11 (var -> id .)
    SE              reduce using rule 11 (var -> id .)
    REPITA          reduce using rule 11 (var -> id .)
    LEIA            reduce using rule 11 (var -> id .)
    ESCREVA         reduce using rule 11 (var -> id .)
    RETORNA         reduce using rule 11 (var -> id .)
    ABRE_PARENTESE  reduce using rule 11 (var -> id .)
    MAIS            reduce using rule 11 (var -> id .)
    MENOS           reduce using rule 11 (var -> id .)
    NEGACAO         reduce using rule 11 (var -> id .)
    NUM_INT         reduce using rule 11 (var -> id .)
    NUM_FLUT        reduce using rule 11 (var -> id .)
    NUM_NOTACAO     reduce using rule 11 (var -> id .)
    ATE             reduce using rule 11 (var -> id .)
    SENAO           reduce using rule 11 (var -> id .)
    FECHA_PARENTESE reduce using rule 11 (var -> id .)
    ABRE_COLCHETE   shift and go to state 22

    indice                         shift and go to state 21

state 25

    (10) lista_variaveis -> var .

    VIRGULA         reduce using rule 10 (lista_variaveis -> var .)
    INTEIRO         reduce using rule 10 (lista_variaveis -> var .)
    FLUTUANTE       reduce using rule 10 (lista_variaveis -> var .)
    ID              reduce using rule 10 (lista_variaveis -> var .)
    $end            reduce using rule 10 (lista_variaveis -> var .)
    FIM             reduce using rule 10 (lista_variaveis -> var .)
    SE              reduce using rule 10 (lista_variaveis -> var .)
    REPITA          reduce using rule 10 (lista_variaveis -> var .)
    LEIA            reduce using rule 10 (lista_variaveis -> var .)
    ESCREVA         reduce using rule 10 (lista_variaveis -> var .)
    RETORNA         reduce using rule 10 (lista_variaveis -> var .)
    ABRE_PARENTESE  reduce using rule 10 (lista_variaveis -> var .)
    MAIS            reduce using rule 10 (lista_variaveis -> var .)
    MENOS           reduce using rule 10 (lista_variaveis -> var .)
    NEGACAO         reduce using rule 10 (lista_variaveis -> var .)
    NUM_INT         reduce using rule 10 (lista_variaveis -> var .)
    NUM_FLUT        reduce using rule 10 (lista_variaveis -> var .)
    NUM_NOTACAO     reduce using rule 10 (lista_variaveis -> var .)
    ATE             reduce using rule 10 (lista_variaveis -> var .)
    SENAO           reduce using rule 10 (lista_variaveis -> var .)


state 26

    (41) expressao -> expressao_logica .
    (44) expressao_logica -> expressao_logica . operador_logico expressao_simples
    (62) operador_logico -> . E_LOGICO
    (63) operador_logico -> . OU_LOGICO

    INTEIRO         reduce using rule 41 (expressao -> expressao_logica .)
    FLUTUANTE       reduce using rule 41 (expressao -> expressao_logica .)
    ID              reduce using rule 41 (expressao -> expressao_logica .)
    $end            reduce using rule 41 (expressao -> expressao_logica .)
    FECHA_COLCHETE  reduce using rule 41 (expressao -> expressao_logica .)
    FECHA_PARENTESE reduce using rule 41 (expressao -> expressao_logica .)
    VIRGULA         reduce using rule 41 (expressao -> expressao_logica .)
    FIM             reduce using rule 41 (expressao -> expressao_logica .)
    SE              reduce using rule 41 (expressao -> expressao_logica .)
    REPITA          reduce using rule 41 (expressao -> expressao_logica .)
    LEIA            reduce using rule 41 (expressao -> expressao_logica .)
    ESCREVA         reduce using rule 41 (expressao -> expressao_logica .)
    RETORNA         reduce using rule 41 (expressao -> expressao_logica .)
    ABRE_PARENTESE  reduce using rule 41 (expressao -> expressao_logica .)
    MAIS            reduce using rule 41 (expressao -> expressao_logica .)
    MENOS           reduce using rule 41 (expressao -> expressao_logica .)
    NEGACAO         reduce using rule 41 (expressao -> expressao_logica .)
    NUM_INT         reduce using rule 41 (expressao -> expressao_logica .)
    NUM_FLUT        reduce using rule 41 (expressao -> expressao_logica .)
    NUM_NOTACAO     reduce using rule 41 (expressao -> expressao_logica .)
    ENTAO           reduce using rule 41 (expressao -> expressao_logica .)
    ATE             reduce using rule 41 (expressao -> expressao_logica .)
    SENAO           reduce using rule 41 (expressao -> expressao_logica .)
    E_LOGICO        shift and go to state 57
    OU_LOGICO       shift and go to state 58

    operador_logico                shift and go to state 59

state 27

    (60) operador_soma -> MAIS .
